# app/model/http/author.go
@@ -11,3 +11,12 @@ type CreateAuthorRequest struct {
 	UserName  string    `json:"user_name" validate:"required"`
 	Password  string    `json:"password" validate:"required"`
 }
+
+type LoginAuthorRequest struct {
+	UserName string `json:"user_name" validate:"required"`
+	Password string `json:"password" validate:"required"`
+}
+
+type LoginAuthorResponse struct {
+	Token string `json:"token"`
+}
