# app/model/repo/author.go
@@ -12,4 +12,5 @@ type Author struct {
 	FullName  string    `db:"full_name" json:"full_name" validate:"required"`
 	UserName  string    `db:"username" json:"username" validate:"required"`
 	Password  string    `db:"password" json:"password" validate:"required"`
+	IsDeleted bool      `db:"is_deleted" json:"password" validate:"required"`
 }
